<menu xmlns:android="http://schemas.android.com/apk/res/android"><item android:id="@+id/navigation_home" android:icon="@drawable/ic_nav_home" android:title="@string/nav_home"/><item android:id="@+id/navigation_record" android:icon="@drawable/ic_nav_record" android:title="@string/nav_record"/><item android:id="@+id/navigation_chart" android:icon="@drawable/ic_nav_chart" android:title="@string/nav_chart"/><item android:id="@+id/navigation_settings" android:icon="@drawable/ic_nav_settings" android:title="@string/nav_settings"/></menu>
